--- a/src/main/resources/templates/schedule/schedulemain.html
+++ b/src/main/resources/templates/schedule/schedulemain.html
@@ -297,7 +297,7 @@
                     $("#part").text(itemp[1]);
                     $("#profname").text(itemp[2]);
                     $("#placename").text(itemp[3]);
-                    $("#colornum").text("#"+itemp[4]);
+                    $("#colornum").text(itemp[4]);
                     $("#topnum").text(itemp[5]);
                     $("#heightnum").text(itemp[6]);
                     $("#coursenum").text(itemp[7]);
@@ -333,7 +333,7 @@
                             "&part=" + list[i].get("part") +
                                 "&profname=" + list[i].get("profname") +
                                 "&placename="+list[i].get("placename")+
-                                "&colornum=" + list[i].get("colornum").substr(1)+
+                                "&colornum=" + list[i].get("colornum")+
                                 "&topnum="+list[i].get("topnum")+
                                 "&heightnum="+list[i].get("heightnum")+
                                 "&coursenum="+list[i].get("coursenum")+
