--- a/src/main/resources/templates/fragments/body.html
+++ b/src/main/resources/templates/fragments/body.html
@@ -184,7 +184,7 @@
 				</div>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" tabindex="-1" aria-disabled="true">통계 그래프</a>
+				<a class="nav-link" href="/yu/graph/graphView" tabindex="-1" aria-disabled="true">통계 그래프</a>
 			</li>
 		</ul>
 	</div>
