--- a/src/main/resources/templates/schedule/contentSearch.html
+++ b/src/main/resources/templates/schedule/contentSearch.html
@@ -237,7 +237,7 @@
             }
 
 
-
+			if(temp[1] == null) return false;
             /////////////////////////////
             var rtimetemp=temp[1].split("-");
 
