--- a/src/main/resources/templates/lecture/lectureView.html
+++ b/src/main/resources/templates/lecture/lectureView.html
@@ -106,7 +106,7 @@
     }
     
     function listButtonClick() {
-    	location.href = "/yu/lectureevaluation/lectureevaluation";
+    	location.href = "/yu/lecture/lecture";
     }
     
     function reportButtonClick(id) {
