--- a/src/main/resources/templates/fragments/body.html
+++ b/src/main/resources/templates/fragments/body.html
@@ -21,7 +21,7 @@
 				</div>
 			</li>
 			<li class="nav-item"><a class="nav-link" href = "/yu/schedule/main">시간표</a></li>
-			<li class="nav-item"><a class="nav-link" href = "/yu/lecture/lecture">강의평가</a></li>
+			<li class="nav-item"><a class="nav-link" href = "/yu/lectureevaluation/lectureevaluation">강의평가</a></li>
 
 			<li class="nav-item dropdown dropdown-mobile"><a class="nav-link dropdown-toggle" style="cursor:pointer" id="dropdown" data-toggle="dropdown">
 				게시판
@@ -170,7 +170,7 @@
 				<a class="nav-link" tabindex="-1" aria-disabled="true" href="/yu/schedule/main">시간표</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" tabindex="-1" aria-disabled="true" href="/yu/lecture/lecture">강의평가</a>
+				<a class="nav-link" tabindex="-1" aria-disabled="true" href="/yu/lectureevaluation/lectureevaluation">강의평가</a>
 			</li>
 			<li class="dropdown dropright">
 				<a class="nav-link" href="#" id="navbarDroprightMenuLink" role="button" data-toggle="collapse" aria-haspopup="true" aria-expanded="false" tabindex="-1" aria-disabled="true" data-target="#demo2">
